# opencv-cpp

./: .gitignore  README.md
canny_edge_detection/: CMakeLists.txt
canny_edge_detection/include/: modules.hpp
canny_edge_detection/src/: main.cpp  modules.cpp
image_filtering/include/: modules.hpp
image_filtering/src/: modules.cpp
opencv-tutorials/core-functionality/Mat/: CMakeLists.txt  License.txt
opencv-tutorials/core-functionality/Mat/include/: modules.h
opencv-tutorials/core-functionality/Mat/src/: main.cpp  modules.cpp
reading_images_and_camera/include/: modules.hpp
reading_images_and_camera/src/: modules.cpp
